# ConstructAI-oss

./: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  package-lock.json  package.json  regression_test.sh  run_tests.sh  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  fix_missing_columns.sql  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_document_tables.py  003_precon_tables.py  004_safety_tables.py  005_project_controls_tables.py  006_orchestration_tables.py  007_production_hardening.py  008_expand_rls.py  009_fred_price_history.py  010_procore_connections.py  011_procore_sync_columns.py  012_expand_cost_items.py  013_regional_cost_factors.py  014_productivity_rates.py  015_osha_enforcement.py  016_rfi_workflow.py  017_submittal_workflow.py  018_daily_log_punch_list_enhancements.py  019_change_order_lifecycle_pay_applications.py  020_drawings_and_enhanced_meeting_minutes.py  021_schedule_import_calendars.py  022_intelligence_briefs.py  023_bid_decision_intelligence.py  024_rfi_resolution_log.py  025_predictive_safety_risk.py  026_punch_list_daily_log_enhancements.py  027_security_rbac_mfa_audit.py  028_cash_flow_translation_cache.py  029_phase2_features.py  030_phase3_features.py  031_phase4_tier1.py  032_add_fk_indexes.py  033_continuous_aggregates.py  034_hnsw_vector_index.py  035_evm_snapshot_unique.py  036_product_integration.py  037_rag_integrity.py  038_guardrail_parse_failed.py  039_audit_log_org_not_null.py  040_drop_ivfflat.py  (+1 more)
apps/api/app/: config.py  database.py  dependencies.py  error_handlers.py  main.py
apps/api/app/api/: router.py
apps/api/app/middleware/: __init__.py  audit.py  compression.py  csrf.py  product_gate.py  rate_limiter.py  request_logging.py  response_profiler.py  security_headers.py  tenant_context.py
apps/api/app/schemas/: admin.py  ambient_field.py  ask.py  auth.py  bid.py  billing.py  camera.py  carbon.py  cash_flow.py  change_order_lifecycle.py  changeflow.py  closeout.py  communication.py  contract_intelligence.py  controls.py  cross_project.py  daily_report.py  digital_twin.py  document.py  drawing.py  drone.py  estimating.py  evaluation.py  feedback.py  field_management.py  heat_compliance.py  instant_pay.py  insurance.py  intelligence_brief.py  logistics.py  magic_link.py  offline_sync.py  orchestrator.py  organization.py  osha.py  pagination.py  pay_application.py  payroll.py  plan_takeoff.py  portfolio.py  (+18 more)
apps/api/app/services/: auth.py  cache.py  document_service.py  organization.py  project.py  user.py
apps/api/app/templates/: daily_report.html  meeting_minutes.html
apps/api/app/utils/: client_ip.py  geometry.py  pagination.py  prompt_sanitizer.py  s3.py  security.py
apps/api/app/workers/: document_worker.py  scheduled_tasks.py  vision_worker.py
apps/api/docs/: DEMO_SCRIPT.md
apps/api/load_tests/: load_test_integration.py  locustfile.py  video_stream_load.py  websocket_load.py
apps/api/scripts/: build_regional_factors.py  fetch_demo_corpus.py  generate_demo_project.py  ingest_ddc_cwicr.py  ingest_demo_corpus.py  ingest_osha_data.py  ingest_osha_standards.py  reset_demo_rfis.py  reset_demo_session.py  seed_compliance_checklists.py  seed_demo_content.py  seed_demo_extras.py  seed_demo_tenants.py  seed_productivity_rates.py
apps/api/static/demo-backups/: README.txt
apps/api/tests/: conftest.py  test_abac_policy.py  test_admin_api.py  test_agent_config_helpers.py  test_agent_metrics.py  test_agents_checkpointer.py  test_alert_service_helpers.py  test_alerting.py  test_ambient_intelligence.py  test_ambient_intelligence_helpers.py  test_ask_service.py  test_audit_logger.py  test_auth.py  test_auth_cookie_helpers.py  test_auth_edge_cases.py  test_auth_token_helpers.py  test_autodesk_integration.py  test_beta_services.py  test_bid_api.py  test_bid_decision_engine.py  test_billing_stripe_service.py  test_brief_pdf_generator.py  test_cache_service.py  test_cameras_api.py  test_canary_deployer.py  test_carbonlens.py  test_carbonlens_helpers.py  test_cash_flow_engine.py  test_cash_flow_helpers.py  test_change_order_analyzer.py  test_change_order_lifecycle.py  test_change_order_transitions.py  test_change_order_workflow.py  test_changeflow.py  test_changeflow_helpers.py  test_checkpointer.py  test_circuit_breaker.py  test_client_ip.py  test_closeout_iq.py  test_closeout_iq_validation.py  (+225 more)
apps/api/tests/e2e/: test_full_workflow.py
apps/api/tests/fixtures/: mock_detections.py  mock_litellm_responses.py  mock_nemo_config.py  mock_responses.py  precon_mock_responses.py  sample_bim_data.py  sample_communication_data.py  sample_documents.py  sample_evaluation_data.py  sample_evm_data.py  sample_onboarding_docs.py  sample_productivity_data.py  sample_quality_data.py  sample_zones.py
apps/api/tests/phase1/: test_chunking.py  test_classifier.py  test_document_agent.py  test_document_upload.py  test_embeddings.py  test_entity_extractor.py  test_pdf_parser.py  test_rag_retrieval.py
apps/api/tests/phase2/: test_contract_risk.py  test_cost_database.py  test_cpm_engine.py  test_dcma_checker.py  test_delivery_router.py  test_estimating_agent.py  test_logistics_agent.py  test_monte_carlo.py  test_parametric_model.py  test_planning_team.py  test_price_forecaster.py  test_procore_client.py  test_procurement_agent.py  test_quantity_extractor.py  test_schedule_optimizer.py  test_scheduling_agent.py  test_simulation.py  test_site_layout.py  test_vendor_manager.py  test_weather_service.py
apps/api/tests/phase3/: test_alert_service.py  test_detector.py  test_frame_processor.py  test_notification_router.py  test_pipeline.py  test_safety_agent.py  test_severity_classifier.py  test_stream_manager.py  test_temporal_smoother.py  test_tracker.py  test_websocket_server.py  test_zone_enforcer.py
apps/api/tests/phase4/: test_activity_recognizer.py  test_change_order_analyzer.py  test_communication_agent.py  test_compliance_checker.py  test_compliance_team.py  (+14 more)
(+679 files in other folders)
