[project]
name = "constructai-api"
version = "0.1.0"
description = "ConstructAI Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "PyJWT[crypto]>=2.8,<3",
    "bcrypt>=4.2,<5",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "boto3==1.36.2",
    "geoalchemy2==0.15.0",
    "psycopg2-binary==2.9.10",
    "PyMuPDF==1.25.3",
    "pdfplumber==0.11.4",
    "defusedxml>=0.7,<1",
    "python-docx==1.1.2",
    "langchain>=0.3.14,<0.3.20",
    "langchain-core>=0.3.29,<0.3.40",
    "langchain-openai>=0.3.0,<0.3.10",
    "langchain-anthropic>=0.3.4,<0.3.10",
    "langgraph>=0.3.21,<0.3.30",
    "langsmith>=0.2.10,<0.2.20",
    "voyageai==0.3.2",
    "cohere==5.13.4",
    "tiktoken==0.8.0",
    "pgvector==0.3.6",
    "celery[redis]==5.4.0",
    "reportlab==4.2.5",
    "deap>=1.4.1,<2",
    "ortools>=9.8,<10",
    "simpy>=4.1,<5",
    "xgboost>=2.0,<3",
    "scikit-learn>=1.4,<2",
    "prophet>=1.1.5,<2",
    "statsmodels>=0.14,<1",
    "pandas>=2.1,<3",
    "numpy>=1.26,<2",
    "fredapi>=0.5,<1",
    "opencv-python-headless>=4.10,<5",
    "deep-sort-realtime>=1.3,<2",
    "paho-mqtt>=2.1,<3",
    "websockets>=14.1,<15",
    "Pillow>=11.1,<12",
    "Shapely>=2.0,<3",
    "lightgbm>=4.1,<5",
    "jinja2>=3.1,<4",
    "markdown>=3.5,<4",
    "weasyprint>=62,<63",
    "langgraph-checkpoint-postgres>=2.0,<3",
    "litellm>=1.55,<2",
    "pybreaker>=1.2,<2",
    "opentelemetry-api>=1.29,<2",
    "opentelemetry-sdk>=1.29,<2",
    "opentelemetry-exporter-otlp>=1.29,<2",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "prometheus-client>=0.21,<1",
    "cryptography>=44,<45",
    "jpype1>=1.5,<2",
    "pyotp>=2.9,<3",
    "qrcode[pil]>=7.4,<8",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "bandit==1.8.3",
    "respx==0.22.0",
    "fakeredis>=2.21,<3",
    "locust>=2.32,<3",
]
vision = [
    "mmdet>=3.3,<4",
    "mmengine>=0.10,<1",
    "ultralytics>=8.3,<9",
    "mlflow>=2.19,<3",
]
execution = [
    "timm>=1.0,<2",
    "faster-whisper>=1.0,<2",
    "confluent-kafka>=2.3,<3",
    "cloudevents>=1.10,<2",
    # Local cross-encoder reranker (replaces Cohere). Default model is
    # BAAI/bge-reranker-v2-m3; downloaded by HuggingFace cache on first use
    # or pre-warmed at API startup.
    "sentence-transformers>=4.0,<5",
]
# `point_cloud` is a separate optional extra because open3d ships no ARM64
# Python 3.12 wheel as of 2026-04. Install only on x86_64 hosts that need
# point-cloud / mesh processing. No production code in apps/api/app/
# imports open3d directly — keeping it out of `execution` lets ARM64
# demos (NVIDIA DGX Spark / GB10 Grace) build the API image natively
# without compiling open3d from source.
point_cloud = [
    "open3d>=0.18,<1",
]
orchestration = [
    "guardrails-ai>=0.5,<1",
    "nemoguardrails>=0.11,<1",
    "mem0ai>=0.1,<1",
    "deepeval>=2.1,<3",
    "ragas>=0.2,<1",
    "evidently>=0.5,<1",
]
production = [
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-celery>=0.50b0",
    "python-keycloak>=4.7,<5",
    "UnleashClient>=6.2,<7",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
# Pragmatic ignores:
#   B008   — FastAPI Depends() idiom requires default in signature
#   B904   — `raise ... from e` is pure-style preference; existing code is explicit
#   E501   — line-length already enforced by formatter; long strings/URLs are unavoidable
#   N806   — uppercase locals (Mock*, DataFrame vars) are idiomatic in tests and ML
#   RUF001 — ambiguous unicode in strings (en-dashes in intentional copy)
#   RUF002 — ambiguous unicode in docstrings (same)
#   RUF003 — ambiguous unicode in comments (en-dashes in migration/module comments)
#   SIM117 — combined `with` statements reduce readability for long mocks
#   UP007  — `Optional[X]` vs `X | None` choice left to author
ignore = [
    "B008", "B904", "E501", "N806",
    "RUF001", "RUF002", "RUF003",
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM113", "SIM117",
    "UP007",
    "E741",  # single-letter names like `l` appear in math/legacy code
    "N803",  # upper-case args (e.g., mathematical L parameter)
    "B007",  # unused loop vars often intentional in tuple unpacking
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["UP007", "UP035", "I001", "E501", "RUF100", "E402"]
"tests/*" = ["N803", "N806", "B017", "F821", "B023", "SIM102", "SIM108", "RUF012", "E402"]
"tests/conftest.py" = ["E402"]
"scripts/*" = ["E402"]
"load_tests/*" = ["RUF012"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
# warn_return_any produces ~80 false-positive-style errors where a value
# from an untyped scientific dependency (numpy, scipy, voyageai, procore
# SDK, confluent-kafka) gets returned from a typed wrapper. Those
# signatures are correct; mypy just can't see the dependency's types.
# Turning this off matches the reality that the untyped-lib boundary
# is where Any enters the codebase on purpose.
warn_return_any = false
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Third-party libraries without type stubs that we deliberately use as
# Any-typed interop layers. Silences [import-not-found] / [attr-defined]
# on these imports without affecting our own code.
[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "cv2.*",
    "deep_sort_realtime.*",
    "ifcopenshell.*",
    "joblib.*",
    "mediapipe.*",
    "numpy.*",
    "onnxruntime.*",
    "paho.mqtt.*",
    "pandas.*",
    "procore.*",
    "pyprocore.*",
    "pytest.*",
    "redis.*",
    "scipy.*",
    "sentence_transformers.*",
    "sklearn.*",
    "tensorrt.*",
    "timm.*",
    "torch.*",
    "torchvision.*",
    "transformers.*",
    "ultralytics.*",
    "voyageai.*",
    "whisper.*",
    "xgboost.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
# Skip noisy rules that produce many false positives in this codebase:
# - B101 assert_used: type-narrowing asserts after explicit None/type checks; safe in production
# - B110 try_except_pass: best-effort cleanup paths (presigned URL generation, cache eviction)
# - B311 random_used_for_security: simulation/jitter/sampling, no security context
# - B105/B106 hardcoded_password_*: empty placeholder tokens or local-dev defaults validated elsewhere
skips = ["B101", "B105", "B106", "B110", "B311"]
